k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-__CI_ENVIRONMENT_SLUG__
  labels:
    app: ci-cd-workshop
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-cd-workshop
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      labels:
        app: ci-cd-workshop
        ref: __CI_ENVIRONMENT_SLUG__
        track: stable
    spec:
      containers:
        - name: app
          image: __CI_REGISTRY_IMAGE__:__VERSION__
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: /
              initialDelaySeconds: 3
              timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: /
              initialDelaySeconds: 3
              timeoutSeconds: 2
