k8s/service.yml
---
apiVersion: apps/v1
kind: Service
metadata:
  name: app-__CI_ENVIRONMENT_SLUG__
  labels:
    app: ci-cd-workshop
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ci-cd-workshop
    ref: __CI_ENVIRONMENT_SLUG__
